testdata/baselines/reference/submodule/conformance/untypedModuleImport_noImplicitAny_scoped.errors.txt
/a.ts(1,22): error TS2307: Cannot find module '@foo/bar' or its corresponding type declarations.


==== /a.ts (1 errors) ====
    import * as foo from "@foo/bar";
                         ~~~~~~~~~~
!!! error TS2307: Cannot find module '@foo/bar' or its corresponding type declarations.
    
==== /node_modules/@foo/bar/package.json (0 errors) ====
    { "name": "@foo/bar", "version": "1.2.3" }
    
==== /node_modules/@foo/bar/index.js (0 errors) ====
    This file is not processed.
    